Feature/6052 stundenplan backend